--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 div {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.404);
 	/* margin: 5px;
   padding: 5px; */
   height: 100%;
@@ -44,8 +44,8 @@ h1 {
   justify-content: center;
   align-items: center;
   border: solid 2px black;
-  height: 500px;
-  width: 700px;
+  height: 100vh;
+  width: 100vw;
 }
 
 .header {
